servletContext HttpServletRequest HttpServletResponse 中文亂碼問題

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,10 @@
 <title>Insert title here</title>
 </head>
 <body>
-	 你好，世界
+	 <form action="TestRequest" method="get">
+	 username : <input type="text" name="username" ><br>
+	 password : <input type="password" name="password" ><br>
+	 <input type="submit" name ="sumbit" value="submit"><br>
+	 </form>
 </body>
 </html>
