--- a/WebContent/StuManager/index.html
+++ b/WebContent/StuManager/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<a href ="StudentListServlet">显示所有学生列表</a> <br>
+<a href ="/WebWay/StudentListServlet">显示所有学生列表</a> <br>
 <br>
 <a href = "./addStudent.jsp">分页显示所有学生</a><br>
 </body>
