--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,8 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+<link href="./css/bootstrap.min.css" rel="stylesheet">
+<script type="text/javascript">
+	 $(function(){
+		 alert(123)
+		 $("btn").click(function(){
+			 alert("clicked")
+		 })
+	 })
+</script>
 </head>
 <body>
+	<a class ="btn btn-primary btn-default">
 	123456789
+</a>
 </body>
 </html>
