solve the problem in column "hobby"
  add new student
  update student information.

--- a/WebContent/StuManager/index.html
+++ b/WebContent/StuManager/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<a href ="/WebWay/SearchStudentServlet?currentPage=1">显示所有学生列表</a> <br>
+<a href ="/WebWay/SearchStudentServlet?name=--chose --&gender=--chose --?currentPage=1">显示所有学生列表</a> <br>
 
 </body>
 </html>
